added authorization on swagger
